<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/popup_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/camera_popup_title"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/popup_voice1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/border_bottom"
        android:fontFamily="sans-serif"
        android:paddingBottom="10dp"
        android:text="@string/camera_popup_option1"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#888"
        android:textSize="18sp" />

    <Button
        android:id="@+id/popup_voice2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/border_bottom"
        android:fontFamily="sans-serif"
        android:paddingBottom="10dp"
        android:text="@string/camera_popup_option2"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#888"
        android:textSize="18sp" />

    <Button
        android:id="@+id/popup_cancel_button"
        style="@style/KaoriButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/button_cancel" />

</LinearLayout>